max-width: none on carousels to fix squished images

--- a/assets/styles/components/_carousels.scss
+++ b/assets/styles/components/_carousels.scss
@@ -24,6 +24,9 @@
   }
   .slide {
     margin-right: 25px;
+    img {
+      max-width: none;
+    }
     &.landscape {
       width: 80%;
       img {
